--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -4,5 +4,14 @@
 
 {% block body %}
     {% include 'components/header.html.twig' %}
-    <h1 class="text-xl">Home Controller</h1>
+    <a href="#" class="flex border border-gray-400 rounded-xl">
+        <div class="w-32 h-32 rounded-xl flex flex-col justify-center items-center">
+            <h1 class="text-xl font-semibold">14</h1>
+            <h1 class="text-xl text-red-600 font-semibold">Nov</h1>
+        </div>
+        <div class="flex flex-col justify-center gap-2 w-2/3">
+            <h1 class="text-xl font-semibold">Name of the event</h1>
+            <h1 class="text-l truncate">Laborum sit ut duis ut Lorem voluptate laboris adipisicing veniam culpa. Laborum cupidatat officia laborum incididunt veniam. Occaecat tempor mollit cupidatat veniam. Veniam aute consequat labore do voluptate. Quis do aute commodo consectetur excepteur dolore non do amet ullamco.</h1>
+        </div>
+    </a>
 {% endblock %}
