--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -4,6 +4,19 @@
 
 {% block body %}
     {% include 'components/header.html.twig' %}
+    
+    {% for event in events %}
+        <a href="{{path('events')}}" class="flex border border-gray-400 rounded-xl">
+            <div class="w-32 h-32 rounded-xl flex flex-col justify-center items-center">
+                <h1 class="text-xl font-semibold">{{event.startDateNumber}}</h1>
+                <h1 class="text-xl text-red-600 font-semibold">{{event.startDateMonth}}</h1>
+            </div>
+            <div class="flex flex-col justify-center gap-2 w-2/3">
+                <h1 class="text-xl font-semibold">{{event.title}}</h1>
+                <h1 class="text-l truncate">{{event.description}}</h1>
+            </div>
+        </a>
+    {% endfor %}
     <a href="#" class="flex border border-gray-400 rounded-xl">
         <div class="w-32 h-32 rounded-xl flex flex-col justify-center items-center">
             <h1 class="text-xl font-semibold">14</h1>
