--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,7 @@
         {% endblock %}
     </head>
     <body class="container max-w-screen-xl mx-auto">
+        {% include 'components/header.html.twig' %}
         {% block body %}{% endblock %}
     </body>
 </html>
